--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "joi": "^17.10.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "postgres-range": "^1.1.3",
     "prisma": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
